# pythtml

./: .gitignore  Makefile  README.md  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini  venv
.github/workflows/: tox.yml
make_scripts/: build_dist.bash  clean.bash  lint3.4.bash
pyfive/: __init__.py  elements.py
pyfive/test/: test_elements.py
src/pyfive/: __init__.py  elements.py
src/pythtml/: __init__.py  elements.py
tests/: test_elements.py  test_init_.py
