[metadata]
name = pythtml
description = HTML generator
long_description = pythtml represents HTML elements as python objects to allow creation of HTML from python code.
url = https://github.com/declaresub/abnf
author = Charles Yeomans
author_email = charles@declaresub.com
license = MIT
keywords = html, generator
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Code Generators
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
platforms = any

[options]
package_dir=
    = src
packages=find:
install_requires=
    importlib_metadata; python_version < '3.8'
python_requires = >=3
zip_safe = False
bdist_wheel = universal:1
[options.packages.find]
where=src

